Fix issues (#118)
* Tune the position of DragPreview, fix #114

* Use tooltip instead of scrollable Tab, fix #111

* Esc in popup mode should not dismiss the window if search keyword is not empty, fix #108

* Better toolbar, fix #103

* Make the shadows of ShadowScrollbars better, fix #105

* Use Alt+T on Windows, ChromeOS, and Linux, fix #107

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -20,7 +20,3 @@ body {
 #popup {
   min-width: 800px;
 }
-
-.tab-title-url::-webkit-scrollbar {
-  display: none;
-}
